完善搜索之后复选框消失问题